--- a/style.css
+++ b/style.css
@@ -2586,6 +2586,7 @@ a[class^="staticslider-button"],
 	opacity: 0;
 	-webkit-animation: .75s 1.2s animation-slider-buttons ease-out forwards;
 	animation: .75s 1.2s animation-slider-buttons ease-out forwards;
+	color: #0062B8;
 }
 
 @-webkit-keyframes animation-slider-buttons {
