--- a/style.css
+++ b/style.css
@@ -220,6 +220,14 @@ h5,
 h6 {
 	clear: both;
 	font-weight: normal;
+	font-family: Signika; 
+	font-size: 24px; 
+	font-style: normal; 
+	font-variant: normal; 
+	font-weight: 700; 
+	line-height: 26.4px;
+
+
 }
 
 
