--- a/style.css
+++ b/style.css
@@ -188,6 +188,7 @@ blockquote::after {
 blockquote cite {
 	font-weight: 400;
 	font-style: normal;
+	font-family: 'Public Sans', sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	font-size: 0.7em;
@@ -234,7 +235,7 @@ pre {
 	padding: 1em;
 	max-width: 100%;
 	overflow: auto;
-	font-family: "Courier 10 Pitch", Courier, monospace;
+	font-family: 'Public Sans', sans-serif;
 	border: 1px solid transparent;
 }
 
@@ -246,14 +247,12 @@ code {
 	overflow: auto;
 	vertical-align: middle;
 	text-indent: 0;
-	font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
-}
+	font-family: 'Public Sans', sans-serif;}
 
 q,
 blockquote {
 	font-size: 1.1em;
-	font-family: Georgia, "Bitstream Charter", serif;
-}
+	font-family: 'Public Sans', sans-serif;}
 
 address {
 	padding-left: 1em;
@@ -388,7 +387,7 @@ input[type="week"] {
 	border: 3px solid transparent;
 	background: transparent;
 	font-size: inherit;
-	font-family: inherit;
+	font-family: 'Public Sans', sans-serif;
 	font-weight: bold;
 	-webkit-transition: background .3s ease-out;
 	transition: background .3s ease-out;
@@ -407,7 +406,7 @@ input[type="reset"] {
 	font-size: .9em;
 	text-transform: uppercase;
 	font-weight: bold;
-	font-family: inherit;
+	font-family: 'Public Sans', sans-serif;
 	-webkit-transition: background-color .3s ease-out;
 	transition: background-color .3s ease-out;
 }
