--- a/style.css
+++ b/style.css
@@ -725,8 +725,6 @@ a#logo > img {
 
 #site-title a {
 	display: block;
-	/*commenting out because we don't really need the site title to be uppercase*/
-	/*text-transform: uppercase;*/
 	text-decoration: none;
 	font-family: 'Open Sans', PT Sans Narrow;
     font-size: 24px;
@@ -6582,7 +6580,7 @@ div#humanities-menu {
 }
 
 ul#menu-studentmain {
-	padding-left: 140px;
+	padding-left: 10.5rem;
 }
 
 div#humanities-menu li {
@@ -6602,10 +6600,11 @@ div#humanities-menu .menu a {
 
 .staticslider-caption {
 	padding-top: 20px;
+	width: 50%;
 }
 
 .lp-staticslider .staticslider-caption {
-	padding-left: 150px;
+	/* padding-left: 150px; */
 }
 
 .seriousslider-theme .seriousslider-caption-buttons a:nth-child(2n+1), a.staticslider-button:nth-child(2n+1) {
@@ -6626,5 +6625,10 @@ i.icon-search {
 	color: #002E5D;
 	float: right;
 }
+
+div#humanities-menu li:hover {
+	background-color: #F3F4F5;
+}
+
 
 /* FIN! */
