--- a/style.css
+++ b/style.css
@@ -6670,4 +6670,24 @@ aside#colophon a:hover, #footer a:hover {
     color: #0062B8;
 }
 
+.statusfilter:hover {
+	color: #D8D3D3;
+	text-decoration: underline;
+}
+
+strong {
+	font-weight: bold;
+	display: inline-block;
+    background: rgba(0, 0, 0, 0.5);
+    padding: 0.3rem;
+    border-radius: 0.75em;
+}
+
+.image-container img {
+	display: block;
+	height: 198%;
+	width: 100%;
+	object-fit: cover;
+}
+
 /* FIN! */
