--- a/resources/css/byu-lightbox.css
+++ b/resources/css/byu-lightbox.css
@@ -10,7 +10,7 @@
     right: 0;
     padding-top: 5%;
     padding-bottom: 5%;
-    z-index: 100;
+    z-index: 1000;
 }
 
 .byuLightboxOverlay {
@@ -52,6 +52,29 @@
 .byuLightboxContent .image-container img {
     max-width: 100%;
 }
+
+.byuLightboxContent .image-container {
+    width: 33%;
+    display: inline-block;
+    padding-left: 1rem;
+    padding-right: 1rem;    
+}
+
+.byuLightboxContent .profile-content img {
+	border-style: solid;
+	border-radius: 0.75em;
+}
+
 .byuLightboxContent .profile-content p.info span {
     padding-left: 5px;
 }
+.byuLightboxContent .content {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.byuLightboxContent .profile-content .text-content a {
+    color: inherit;
+    text-decoration: underline;
+}
+
