--- a/style.css
+++ b/style.css
@@ -6584,6 +6584,7 @@ div#humanities-menu {
 
 ul#menu-studentmain {
 	padding-left: 10.5rem;
+	box-shadow: 0 0 8px rgba(0,0,0,.2);
 }
 
 div#humanities-menu li {
@@ -6675,12 +6676,16 @@ aside#colophon a:hover, #footer a:hover {
 	text-decoration: underline;
 }
 
-strong {
+figcaption strong, .wp-block-cover strong {
 	font-weight: bold;
 	display: inline-block;
     background: rgba(0, 0, 0, 0.5);
     padding: 0.3rem;
     border-radius: 0.75em;
+}
+
+figcaption strong, .wp-block-cover strong:hover {
+	color: lightgray;
 }
 
 .image-container img.directory-portrait {
@@ -6714,6 +6719,19 @@ strong {
 .single .content {
     display: inline-block;
     vertical-align: top;
+}
+
+.text-content p {
+	font-size: large;
+}
+
+figure img {
+	border-radius: 25px;
+}
+
+figcaption {
+	border-bottom-left-radius: 28px;
+	border-bottom-right-radius: 28px;
 }
 
 /* FIN! */
