--- a/style.css
+++ b/style.css
@@ -6742,4 +6742,9 @@ img.directory-portrait.byuLightbox:hover {
 	opacity: 0.7;
 }
 
+div#content a.lp-box-readmore, div#content a.staticslider-button, div#content a.elementor-button-link {
+	color: white;
+	text-decoration: none;
+}
+
 /* FIN! */
