--- a/resources/css/directory.css
+++ b/resources/css/directory.css
@@ -206,10 +206,10 @@
     padding-bottom: 66%;
   }
 }
-.directory ul.directory-list li .image-container {
+/* .directory ul.directory-list li .image-container {
   border-width: 4px;
   border-style: solid;
-}
+} */
 .directory ul.directory-list li .content {
   display: table-cell;
   padding: 32px;
