--- a/style.css
+++ b/style.css
@@ -6742,9 +6742,13 @@ img.directory-portrait.byuLightbox:hover {
 	opacity: 0.7;
 }
 
-div#content a.lp-box-readmore, div#content a.staticslider-button, div#content a.elementor-button-link {
+div#content a.lp-box-readmore, div#content a.staticslider-button, div#content a.elementor-button-link, aside#colophon a {
 	color: white;
 	text-decoration: none;
+}
+
+aside#colophon a:hover {
+	color: lightgray;
 }
 
 /* FIN! */
