--- a/resources/css/directory.css
+++ b/resources/css/directory.css
@@ -178,7 +178,7 @@
     }
 }
 .directory ul.directory-list li {
-    background: #b3d4fc;
+    background: #f6f6f8;
     color: #86847d;
     width: 100%;
     margin-bottom: 10px;
