--- a/style.css
+++ b/style.css
@@ -6703,6 +6703,8 @@ h4.byuLightbox:hover {
 	color: gray;
 }
 
+/* doing a demo */
+
 img.directory-portrait.byuLightbox:hover {
 	opacity: 0.7;
 }
