Finished fixing directory colors

--- a/style.css
+++ b/style.css
@@ -6776,7 +6776,7 @@ div#content .news-title {
 }
 
 .directory-list .filterable-item .content h5 {
-	color: #666666;
+	color: black;
 }
 
 /* FIN! */
