--- a/style.css
+++ b/style.css
@@ -6712,6 +6712,7 @@ img.directory-portrait.byuLightbox:hover {
 div#content a.lp-box-readmore, div#content a.staticslider-button, div#content a.elementor-button-link, aside#colophon a {
 	color: white;
 	text-decoration: none;
+	display: none;
 }
 
 aside#colophon a:hover {
@@ -6776,7 +6777,7 @@ div#content .news-title {
 }
 
 .directory-list .filterable-item .content h5 {
-	color: #666666;
+	color: black;
 }
 
 /* FIN! */
