Specified css selector for the button

--- a/style.css
+++ b/style.css
@@ -6709,9 +6709,12 @@ img.directory-portrait.byuLightbox:hover {
 	opacity: 0.7;
 }
 
-div#content a.lp-box-readmore, div#content a.staticslider-button, div#content a.elementor-button-link, aside#colophon a {
+div#content a.lp-box-readmore, div#content a.staticslider-button, aside#colophon a {
 	color: white;
 	text-decoration: none;
+}
+
+div#content a.elementor-button-link {
 	display: none;
 }
 
