Made it so that the user does not have to scroll to see the article and the image

--- a/style.css
+++ b/style.css
@@ -6744,7 +6744,8 @@ section.recent-news {
 }
 
 .recent-news-box img {
-    max-height: 80vh;
+    max-height: 195px;
+	max-width: 260px;
 }
 
 .news-description {
