--- a/resources/css/directory.css
+++ b/resources/css/directory.css
@@ -112,7 +112,7 @@
     margin: 0;
     border: none;
     outline: none;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: "HCo Ringside Narrow SSm", "Open Sans", Helvetica, Arial, sans-serif;
     font-weight: 700;
     font-size: 16px;
     display: inline-block;
