font fixes on directory page

--- a/resources/css/directory.css
+++ b/resources/css/directory.css
@@ -113,7 +113,7 @@
     border: none;
     outline: none;
     font-family: "HCo Ringside Narrow SSm", "Open Sans", Helvetica, Arial, sans-serif;
-    font-weight: 700;
+    font-weight: lighter;
     font-size: 16px;
     display: inline-block;
 }
