Fixed the mobile search

--- a/style.css
+++ b/style.css
@@ -6810,4 +6810,8 @@ footer.post-continue-container .continue-reading-link {
 	box-shadow: 0 0 8px rgba(0,0,0,.2);
 }
 
+form.searchform:hover {
+	color: black;
+}
+
 /* FIN! */
