--- a/style.css
+++ b/style.css
@@ -2949,7 +2949,7 @@ a.staticslider-button + a.staticslider-button,
 
 .lp-boxes.lp-boxes-rows-1 .lp-boxes-margins .lp-box {
 	margin-top: 1em;
-	margin-bottom: 1em;
+	margin-bottom: -4em;
 }
 
 .lp-boxes.lp-boxes-rows-4 .lp-box:nth-child(4n),
@@ -2974,7 +2974,7 @@ a.staticslider-button + a.staticslider-button,
 	z-index: 10;
 	display: block;
 	width: 100%;
-	height: 100%;
+	height: 88%;
 }
 
 .lp-box-image::before {
@@ -3211,18 +3211,22 @@ a.staticslider-button + a.staticslider-button,
 }
 
 .lp-boxes-static .lp-box-image > img {
-	-webkit-transform: scale(1);
+	/* -webkit-transform: scale(1); */
 	object-fit: contain;
-	-ms-transform: scale(1);
+	/* -ms-transform: scale(1);
 	transform: scale(1);
 	-webkit-transition: .75s all ease;
-	transition: .75s all ease;
+	transition: .75s all ease; */
 }
 
-.lp-boxes-static .lp-box-image:hover > img {
+/* .lp-boxes-static .lp-box-image:hover > img {
 	-webkit-transform: scale(1.1);
 	-ms-transform: scale(1.1);
 	transform: scale(1.1);
+} */
+
+#lp-boxes-1 .lpbox-rnd8 {
+	background-color: white;
 }
 
 .lp-boxes-static .lp-box-link {
