--- a/style.css
+++ b/style.css
@@ -6838,6 +6838,10 @@ a.continue-reading-link {
 	display: none;
 }
 
+aside#colophon a.fa {
+	font-family: 'FontAwesome';
+}
+
 /*************/
 /* SUB-MENUS */
 /*************/
